

==============================
Release 5.*
==============================
2014-05-09    Merge NumericUpDown into the NumberBox
2014-05-08    Add NullToVisibilityConverter
2014-05-08    Add NullToBooleanConverter
2014-05-08    Make the InverseBooleanConverter sealed
2014-05-05    Take care about the Horizontal|VerticalContentAlignment in the EnhancedTextBox


==============================
Release 5.0.0.0
==============================
2014-04-06    Add automation IDs
2014-04-04    Adjust XmlnsDefinitions
2014-03-23    Add documentations
2014-03-23    Add PagingControl
2014-03-22    Adjust documentation to not to show warnings for missing documentations
2014-03-20    Add some missing objects
2014-03-17    Take over all objects from 4.0.0.0
==============================