@@ -3,6 +3,8 @@
 ==============================
 Release 5.*
 ==============================
+2014-05-09    Add possibility to check and uncheck a NumberBox
+2014-05-09    Add possibility to have a reset button in the NumberBox
 2014-05-09    Merge NumericUpDown into the NumberBox
 2014-05-08    Add NullToVisibilityConverter
 2014-05-08    Add NullToBooleanConverter
